Fix: align display + calculator button container

--- a/style/styles.css
+++ b/style/styles.css
@@ -7,12 +7,18 @@ body {
   background-color: aliceblue;
 }
 
+.calculator-container {
+  display: flex;
+  flex-direction: column;
+  width: max(600px, 30vw);
+}
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 900px;
+  width: 100%;
   height: 700px;
 }
 
@@ -23,8 +29,7 @@ body {
   border: 2px solid #448d76;
   border-radius: 10px;
   min-width: 396px;
-  max-width: 396px;
-  max-height: 220px;
+  width: 100%;
   height: 180px;
   box-sizing: border-box;
   word-wrap: anywhere;
@@ -33,7 +38,7 @@ body {
 
 .operandsContainer {
   display: flex;
-  width: 30%;
+  width: 80%;
   height: 100%;
   flex-wrap: wrap;
 }
@@ -41,6 +46,7 @@ body {
 .operatorContainer {
   display: flex;
   flex-direction: column;
+  width: 20%;
   height: 100%;
 }
 
